[package]
name = "prompt"
version = "0.1.0"
authors = ["Jasmin Bom <jsmnbom@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.14", features=["event-stream"] }
tokio = { version = "0.2.9", features = ["full"] }
futures = "0.3"
futures-timer = "2"

