[package]
name = "prompt"
version = "0.1.0"
authors = ["Jasmin Bom <jsmnbom@gmail.com>"]
edition = "2018"
description = "Interactive prompts for the command line"
repository = "https://github.com/jsmnbom/prompt-rs"
license = " MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.14", features=["event-stream"] }
futures = "0.3"
futures-timer = "2"
async-trait = "0.1.22"

[dev-dependencies]
tokio = { version = "0.2.10", features = ["full"] }
