[package]
name = "prompts"
version = "0.2.0"
authors = ["Jasmin Bom <jsmnbom@gmail.com>"]
edition = "2018"
description = "Interactive prompts for the command line"
repository = "https://github.com/jsmnbom/prompts-rs"
license = " MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.25.0", features=["event-stream"] }
futures = "0.3"
futures-timer = "3.0.2"
async-trait = "0.1.22"

[dev-dependencies]
tokio = { version = "1.21.2", features = ["full"] }
